# ratscramble

./: .gitignore  AGENT_CONTEXT.md  README.md  RULES.md  STRATEGY.md  config.yml  game_log.json  main.py  pyproject.toml  requirements.txt  visual_main.py
cdk/: app.py  ratscramble_stack.py
src/agents/: base_agent.py  player_agent.py
src/config/: loader.py  settings.py
src/game/: cards.py  engine.py  models.py  orchestrator.py
src/llm/: bedrock_client.py  json_utils.py
src/logging/: game_logger.py
src/messaging/: event_bus.py
src/referee/: referee_agent.py
src/ui/: game_display.py
tests/e2e/: test_bedrock_live.py
tests/unit/: test_config_loader.py  test_effect_cards.py  test_json_utils.py  test_orchestrator_contract_enforcement.py  test_player_agent_tools.py  test_rules_engine.py
